[tool.poetry]
name = "gears-average-field"
version = "0.9"
description = "Demonstrate averaging fields"
authors = ["André Srinivasan"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.3.4"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"